testdata/error/imbalance_deduced_from_balance.ledger
; Example of Ledger with imbalance posting, with its value deduced from balance.

2024/01/20 * Initial
    Assets:Bank                              100,000 JPY
    Equity

2024/01/20 * Shop
    Assets:Bank                                          = 90,000 JPY
    Expenses:Cash                             15,000 JPY
    ; must be 10,000 JPY
